<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Self-made Health</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Don\'t have an account? Sign Up here</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="error">Invalid Email or Password!</string>
    <string name="lose">Lose weight</string>
    <string name="maintain">Maintain weight</string>
    <string name="gain">Gain weight</string>
    <string name="activity_spinner">Choose how active you are</string>

    <string-array name="activity_arrays">
        <item>Sedentary (little or no exercise)</item>
        <item>Light active (exercise 1-3 days/week)</item>
        <item>Moderate active (exercise 3-5 days/week)</item>
        <item>Active (exercise 6-7 days/week)</item>
        <item>Very active (hard exercise 6-7 days/week)</item>
    </string-array>

    <string-array name="foodCategory">
        <item>Breads and Cereals</item>
        <item>Meat and Fish</item>
        <item>Fruits and Vegetables</item>
        <item>Milk and Dairy</item>
        <item>Fats and Sugars</item>
        <item>Others</item>

    </string-array>

    <string-array name="activity_arrays">
        <item>Sedentary (little or no exercise)</item>
        <item>Light active (exercise 1-3 days/week)</item>
        <item>Moderate active (exercise 3-5 days/week)</item>
        <item>Active (exercise 6-7 days/week)</item>
        <item>Very active (hard exercise 6-7 days/week)</item>
    </string-array>

</resources>
