<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content" android:layout_width="wrap_content">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".EditProfile">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="Hi, "
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="We want to know more about you!"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_female"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="124dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/female"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_male"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="212dp"
        android:gravity="center"
        android:text="Age:"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#D5FEFFFF"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_male" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="272dp"
        android:gravity="center"
        android:text="Height:"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#D5FEFFFF"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_male" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="322dp"
        android:gravity="center"
        android:text="Weight:"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#D5FEFFFF"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_male" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="362dp"
        android:gravity="center"
        android:text="Allergies:"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_eggs"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="404dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/egg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_dairy"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/dairy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_fish"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="172dp"
        android:layout_marginRight="172dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/fish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_gluten"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/gluten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_peanut"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/peanuts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ideal_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_eggs"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lose" />

        <RadioButton
            android:id="@+id/radio_maintain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/maintain" />

        <RadioButton
            android:id="@+id/radio_gain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/gain" />
    </RadioGroup>

    <Spinner
        android:id="@+id/activity_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        android:entries="@array/activity_arrays"
        android:prompt="@string/activity_spinner"/>

    <ImageButton
        android:id="@+id/button_weight"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="98dp"
        android:layout_marginLeft="98dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="248dp"
        android:layout_marginRight="248dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/idealkg"
        app:layout_constraintBottom_toTopOf="@+id/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/ideal_weight"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="17dp"
        android:background="#D5FEFFFF"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_weight"
        app:layout_constraintTop_toBottomOf="@+id/activity_spinner" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="12dp"
        android:text="Save"
        app:layout_constraintBottom_toTopOf="@+id/photo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ideal_weight" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_menu_button"
        android:drawableTop="@drawable/ic_portrait"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/meals_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_menu_button"
        android:drawableTop="@drawable/ic_clock"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/photo_button"
        app:layout_constraintStart_toEndOf="@+id/profile_button" />

    <Button
        android:id="@+id/photo_button"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_menu_button"
        android:drawableTop="@drawable/ic_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>